# nfactorial-homeworks

ascii-art/src/: ascii_generator.py  main.py
ascii-art/tests/: test_ascii_generator.py
assignment10-11/hw-10-11-doctorrin-master/: draft.py  hw.py
assignment12/: hw.py
assignment14/: pyproject.toml
assignment15/hw-15/: hw.py  test_hw.py
assignment16/__MACOSX/: ._hw-16
assignment16/__MACOSX/hw-16/: ._hw.py
assignment16/__MACOSX/hw-16/.github/workflows/: ._classroom.yml
assignment16/hw-16/: hw.py
assignment6/: main.py
assignment7/hw-7-updated-doctorrin-master/: draft.py  hw.py
assignment8/: draft8.py
assignment8/hw-8-updated-doctorrin-master/: hw.py
assignment9/hw-9-doctorrin-master/: draft.py  hw.py
